commit working versions

--- a/test/desktop_index.xhtml
+++ b/test/desktop_index.xhtml
@@ -3,8 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" lang="en" xml:lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mywsb.css Test Page</title>
-    <link href="styles/mywsb.css" rel="stylesheet" type="text/css" />
+    <title>wordsearch.css Test Page</title>
+    <link href="styles/wordsearch.css" rel="stylesheet" type="text/css" />
     <style>
       * {
         -webkit-box-sizing: border-box;
@@ -72,8 +72,6 @@
 
         <section id="text__headings">
           <h3>Headings</h3>
-          <h1><span class="label">Label</span>Heading 1 with Label</h1>
-          <h1><span class="ordinal">1</span>Heading 1 with Ordinal</h1>
           <h1>Heading 1</h1>
           <p class="h1sub">Subheading 1</p>
 
@@ -125,7 +123,6 @@
           <h2>Type Classes</h2>
           <h3>.auth</h3>
           <p class="auth">Chapter Author's Name</p>
-          <h3>
           <p class="italic">This text is italicized.</p>
           <p class="bold-italic">This text is both.</p>
           <p class="left">This text is left-aligned.</p>
