update wsextra font

--- a/test/mywsb_index.xhtml
+++ b/test/mywsb_index.xhtml
@@ -100,6 +100,7 @@
 
         <section id="text__inline">
           <h2>Inline Elements</h2>
+          <p><span class="wsextra">&#58640;</span></p>
           <p><a href="#!">A text link looks like this</a>.</p>
           <p><a data-cross-ref='{"scripture":""}'>A Scripture reference link looks different.</a></p>
           <p class="br-before">Superscript is <sup>superduper</sup>.</p>
